<resources>
    <string name="app_name">EcoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_quest">Quest</string>
    <string name="title_profile">Profilo</string>
    <string name="title_settings">Settings</string>

    <!-- Home Screen -->
    <string name="welcome_user">Ciao, %1$s!</string>
    <string name="daily_motto">Pronto a salvare il pianeta oggi?</string>

    <!-- Profile Screen -->
    <string name="profile_edit">Modifica</string>
    <string name="profile_user_avatar_description">User Avatar</string>
    <string name="profile_user_name_placeholder">Mario Rossi</string>
    <string name="profile_user_nickname_placeholder">Nickname</string>
    <string name="profile_user_real_name_placeholder">Nome Reale</string>
    <string name="profile_user_bio_placeholder">Bio dell\'utente...</string>
    <string name="profile_user_level_placeholder">Livello: Eco-Warrior</string>
    <string name="profile_user_quote_placeholder">\"Ogni gesto conta!\"</string>
    <string name="profile_impact_title">IL TUO IMPATTO (Statistiche)</string>
    <string name="profile_total_points_value">0</string>
    <string name="profile_total_points_label">Punti Totali</string>
    <string name="profile_co2_saved_value">0 kg</string>
    <string name="profile_co2_saved_label">CO2 Salvata</string>
    <string name="profile_next_level_label">Prossimo Livello:</string>
    <string name="profile_next_level_percentage">75% completato</string>
    <string name="profile_recent_activity_title">ATTIVITÀ RECENTI</string>
    <string name="profile_my_badges_title">I Miei Badge</string>
    <string name="profile_badge_description">Badge</string>
    <string name="profile_last_quests_title">Ultime Quest Completate</string>
    <string name="profile_quest_completed_description">Quest completata</string>
    <string name="profile_quest1_description">Riciclo Plastica (Oggi)</string>
    <string name="profile_quest1_points">+50 pt</string>
    <string name="profile_quest2_description">Mobilità Sostenibile (Ieri)</string>
    <string name="profile_quest2_points">+30 pt</string>
    <string name="profile_social_title">SOCIAL</string>
    <string name="profile_my_friends_title">I Miei Amici</string>
    <string name="profile_view_all">VEDI TUTTI ></string>

    <!-- Quest -->
    <!-- 1. attributi quests -->
    <string name="quest_id">%1$d</string>
    <string name="quest_name">QuestName</string>
    <string name="quest_description">QuestDescription</string>
    <string name="quest_type">QuestType</string>
    <string name="quest_max_progress">%1$d</string>
    <string name="quest_CO2_saved">%1$.2f kg</string>
    <string name="quest_reward_points">%1$d pts</string>
    <string name="quest_image">Quest Image</string>
    <string name="quest_times_completed">COMPLETATA %d VOLTE</string>

    <!-- 2. labels attributi quests -->
    <string name="quest_description_label">Descrizione</string>
    <string name="quest_CO2_saved_label">CO₂ RISPARMIATA</string>
    <string name="quest_reward_points_label">PUNTI PREMIO</string>
    <string name="quest_image_eu_goals_label">Obiettivi Sostenibili</string>

    <!-- 3. necessario per nav_graph.xml -->
    <string name="quest_fragment_label">Quest</string>

    <!-- 4. Global quests - fragment_quest_global_detail.xml -->
    <string name="quest_button_accept_quest">Accetta Quest</string>
    <string name="quest_global_detail_label">Dettagli</string>

    <!-- 5. Ongoing quests -->
    <string name="quest_ongoing_detail_label">Dettagli</string>
    <string name="quest_current_progress">%1$d / %2$d</string>
    <string name="quest_button_complete_quest">Completa Quest</string>
    <string name="quest_button_abandon_quest">ABBANDONA QUEST</string>
    <string name="quest_plus_one_label">+1</string>
    <string name="quest_minus_one_label">-1</string>
    <string name="quest_plus_ten_label">+10</string>
    <string name="quest_minus_ten_label">-10</string>

    <!-- 4. Completed quests -->
    <string name="quest_completed_detail_label">Dettagli</string>
    <string name="quest_button_redo_quest">Ricomincia Quest</string>
    <string name="quest_total_CO2_saved_label">CO₂ RISPARMIATA TOT.</string>
    <string name="quest_total_reward_points_label">PUNTI PREMIO TOT.</string>


    <!-- Edit Profile Screen -->
    <string name="edit_profile_title">Modifica Profilo</string>
    <string name="edit_profile_avatar_preview_desc">Anteprima foto profilo</string>
    <string name="edit_profile_change_photo">Cambia Foto</string>
    <string name="edit_profile_nickname">Nickname</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_new_password">Nuova Password</string>
    <string name="edit_profile_confirm_password">Conferma Password</string>
    <string name="edit_profile_save_button">Salva Modifiche</string>

    <string name="hint_nickname">Nickname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Nuova Password</string>
    <string name="hint_confirm_password">Conferma Password</string>
    <string name="button_save">Salva Modifiche</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
</resources>
