<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonAcceptQuest">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/questImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/quest_image" />

            <TextView
                android:id="@+id/txtQuestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/txtQuestType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_type"
                android:layout_marginTop="6dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtQuestDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/quest_description" />

            <TextView
                android:id="@+id/txtCO2saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_CO2_saved"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/txtQuestRewardPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_reward_points"
                android:layout_marginTop="8dp"
                android:textColor="#4CAF50" />

            <LinearLayout
                android:id="@+id/containerEuGoals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- PULSANTE ACCETTA QUEST -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAcceptQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_accept_quest"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>