<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/questImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/quest_image" />

        <TextView
            android:id="@+id/txtQuestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quest_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <!-- Container per allineare Type (sinistra) e Punti (destra) sulla stessa riga -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <!-- Tipo della Quest allineato a sinistra -->
            <TextView
                android:id="@+id/txtQuestType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/quest_type"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />

            <!-- Punti Premio allineati a destra -->
            <TextView
                android:id="@+id/txtQuestRewardPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/quest_reward_points"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>